env/ingress-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventgrid-ingress
  namespace: eventgrid-ext
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/secure-backends: "false"
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "off"
spec:
  defaultBackend:
    service:
      name: eventgrid
      port:
        number: 443
